layout issues

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -147,6 +147,12 @@ body {
     font-size: 16px;
 
 }
+body, main, app-root {
+    display: flex;
+    flex-direction: column;
+    flex:auto;
+    // overflow: auto;
+}
 .ui-accordion-content-wrapper-overflown {
     overflow: hidden;
 }
@@ -174,8 +180,8 @@ body {
 .main-section {
     background: #3c1454;
     height: 100%;
-    max-width: 1366px;
-    margin: 0 auto;
+    // max-width: 1366px;
+    // margin: 0 auto;
 }
 
 input, textarea{
